--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <% if (!user) { %>
-<p>Welcome!</p>
+<h1>The Future is DeFi!</h1>
+<p><a href="https://www.youtube.com/watch?v=pVlkFW43820" target="_blank">About us</a></p>
 <p>Please <a href="/login">log in</a> with account.</p>
 <p>Or login with <a href="/auth/github">github</a>.</p>
 <% } else { %>
